--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 body{
     background-color: rgb(168, 149, 185);
 }
+@media only screen and (max-width: 600px) {
+    body {
+      background-color:rgb(168, 149, 185);
+    }
+  }
+
+ 
